Fix Cards Z-Index, Integration Auth Modal
Changes:
1. Increased cards z-index to max
2. Added close behavior to integration auth modal

--- a/app/containers/Cards/cards.css
+++ b/app/containers/Cards/cards.css
@@ -1,6 +1,6 @@
 .card {
   position: fixed !important;
-  z-index: 100000000;
+  z-index: 10000000000;
 }
 
 .card-tab {
